media assets: fix sidebar overflow on Chrome.
Fix bug on the media assets show page where very long EXIF values wouldn't be word-broken, so they
could cause the sidebar to become wider than the screen. This only affected Chrome, not Firefox or
Safari.

Example: https://danbooru.donmai.us/media_assets/7167264

--- a/app/javascript/src/styles/common/utilities.scss
+++ b/app/javascript/src/styles/common/utilities.scss
@@ -48,7 +48,8 @@ $spacer: 0.25rem; /* 4px */
 .overflow-auto { overflow: auto; }
 .overflow-hidden { overflow: hidden; }
 
-.break-all { word-break: break-all; }
+.break-all { word-break: break-all; overflow-wrap: anywhere; }
+.break-words { word-break: break-word; overflow-wrap: anywhere; }
 .whitespace-nowrap { white-space: nowrap; }
 
 .pointer-events-none { pointer-events: none; }
